--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.8",
     "react": "^18",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18",
-    "next": "14.2.8"
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "postcss": "^8",
